# bogofilter

./: README
bogofilter/: .gitignore  AUTHORS  Doxyfile  GETTING.STARTED  INSTALL  Makefile.am  NEWS  README  README.AddressSanitizer  README.git  RELEASE.NOTES  RELEASES  autogen.sh  bogofilter.cf.example  bogofilter.spec.in  configure.ac
bogofilter/contrib/: .gitignore  bogofilter-milter.pl  spamitarium.pl  trainbogo.sh  xcalloc-debug.patch
bogofilter/doc/: .gitignore  Makefile.am  README.db  bogofilter-faq.html  bogofilter.xml  integrating-with-postfix
bogofilter/doc/programmer/RISC-OS/src/: config.h
bogofilter/meta/repoconversion/: Makefile  README.txt  bogofilter-svn2git-2-cleanup.sh  bogofilter-svn2git.rules  bogofilter-svn2git.txt  bogofilter.lift  bogofilter.map  conversion.log.xz  do-conversion.sh  post-conversion-cleanup.sh  run-conversion.sh
bogofilter/meta/repoconversion.old-svn-all-fast-export-svn2git/: bogofilter-svn2git-1-import.sh
bogofilter/src/: .gitignore  Makefile.am  base64.c  bftypes.h  bogoQDBMupgrade.c  bogoconfig.c  bogoconfig.h  bogofilter.c  bogolexer.c  bogoreader.c  bogotune.c  bogoutil.c  buff.c  charset.c  charset.h  collect.c  common.h  datastore.c  datastore.h  datastore_db.c  datastore_db.h  datastore_db_trans.c  datastore_kc.c  datastore_lmdb.c  datastore_qdbm.c  datastore_sqlite.c  datastore_tc.c  degen.h  error.c  format.c  format.h  globals.c  globals.h  iconvert.c  lexer.c  lexer.h  lexer_v3.l  main.c  maint.c  maint.h  (+19 more)
bogofilter/src/tests/: .gitignore  Makefile.am  t.bogodir  t.debian-bug-524758  t.fgetsl.abort  t.frame  t.passthrough-truncation  t.sf-bug-122
bogofilter/tests/: .gitignore
web/: .gitignore  README_BEFORE_EDITING  distros.shtml  index.shtml  lists.shtml  man_page.shtml  updateweb
web/inc/: footer.inc.shtml  version.inc.txt
web/security/: index.html
